# COSE461_NLP_cs224n

./: README.md
Assignment1/: 2021171077_정재윤.ipynb  pyproject.toml
Assignment2/: parser_model.py  parser_transitions.py  pyproject.toml  run.py
Assignment2/results/20260325_171252/: model.weights
Assignment2/results/20260325_181835/: model.weights
Assignment2/utils/: general_utils.py  parser_utils.py
Assignment3/: beam_search_diagnostics.py  model_embeddings.py  nmt_model.py  pyproject.toml  run.ipynb  run.py  sanity_check.py  utils.py  vocab.py
Assignment3/runs/nmt_local/: events.out.tfevents.1775462325.jeongdonghwan-ui-MacBookAir.local.13326.0
