[project]
name = "a3-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "scipy",
    "tqdm",
    "docopt",
    "nltk",
    "torchvision",
    "torch",
    "sentencepiece",
    "lxml==5.0.0",
    "sacrebleu",
    "setuptools==75.1.0",
    "tensorboard",
]
